# brainmeshing

./: .gitignore  README.md  Snakefile  environment.yml  pyproject.toml
scripts/: gray_matter_surfaces.py  mesh_generation.py  mesh_segments.py  ventricle_surface.py  white_gray_separation.py  white_matter_surface.py
src/brainmeshing/: _cli.py  gray_matter_surfaces.py  mesh_generation.py  mesh_segments.py  separation.py  surfaces.py  utils.py  ventricles.py  white_gray_separation.py  white_matter_surfaces.py
