[project]
name = "brain-meshing"
authors = [
    {name = "Jørgen Riseth", email = "jnriseth@gmail.com"},
]
version = "0.1.0"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"} 

[project.scripts]
brainmeshing = "brainmeshing._cli:brainmeshing"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"
